--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meal",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AurimasCerniauskas.github.io/meal",
+  "homepage": "https://AurimasCerniauskas.github.io/React-App-Recipes-search",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.5",
